--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "moment": "^2.24.0",
+    "shortid": "^2.2.14",
     "vue": "^2.5.22",
     "vue-class-component": "^6.0.0",
+    "vue-croppa": "^1.3.8",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@types/jest": "^23.1.4",
+    "@types/shortid": "0.0.29",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-plugin-typescript": "^3.4.0",
     "@vue/cli-plugin-unit-jest": "^3.4.0",
