--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "shortid": "^2.2.14",
     "vue": "^2.5.22",
     "vue-class-component": "^6.0.0",
-    "vue-croppa": "^1.3.8",
+    "vue-cropperjs": "^3.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@types/cropperjs": "^1.1.5",
     "@types/jest": "^23.1.4",
     "@types/shortid": "0.0.29",
     "@vue/cli-plugin-babel": "^3.4.0",
